updated jar libs